--- a/animated-star-rating/demo/dev.html
+++ b/animated-star-rating/demo/dev.html
@@ -10,6 +10,7 @@
 
     <animated-star-rating enh-by-be-importing=co-depends/animated-star-rating/root.html></animated-star-rating>
     
+    <animated-star-rating></animated-star-rating>
     <button type=button onclick='setRating()'>Set rating</button>
 
 
@@ -22,12 +23,12 @@
                 "be-definitive/": "../../node_modules/be-definitive/",
                 "be-enhanced/": "../../node_modules/be-enhanced/",
                 "be-exportable/": "../../node_modules/be-exportable/",
-                "be-hive/": "../../node_modules/be-hive/",
+                "be-hive/": "../../be-hive/",
                 "be-importing/": "../../node_modules/be-importing/",
                 "be-one-and-only/": "../../node_modules/be-one-and-only/",
                 "be-written/": "../../node_modules/be-written/",
                 "stream-orator/": "../../node_modules/stream-orator/",
-                "trans-render/": "../../node_modules/trans-render/",
+                "trans-render/": "../../trans-render/",
                 "xtal-element/": "../../node_modules/xtal-element/",
                 "co-depends/": "../../"
             }
