--- a/animated-star-rating/root.html
+++ b/animated-star-rating/root.html
@@ -288,7 +288,7 @@
                     }
                 }
             </style>
-            <form part=rating class="rating" be-bound='{"propBindings": [[".rating.value", "rating"]]}'>
+            <form part=rating class="rating" be-bound='[[".rating.value", "rating"]]'>
                 <div part=rating-stars class="rating__stars">
                     <input id="rating-1" class="rating__input rating__input-1" type="radio" name="rating" value="1">
                     <input id="rating-2" class="rating__input rating__input-2" type="radio" name="rating" value="2">
