--- a/animated-star-rating/demo/dev.html
+++ b/animated-star-rating/demo/dev.html
@@ -23,12 +23,12 @@
                 "be-definitive/": "../../node_modules/be-definitive/",
                 "be-enhanced/": "../../node_modules/be-enhanced/",
                 "be-exportable/": "../../node_modules/be-exportable/",
-                "be-hive/": "../../be-hive/",
+                "be-hive/": "../../node_modules/be-hive/",
                 "be-importing/": "../../node_modules/be-importing/",
                 "be-one-and-only/": "../../node_modules/be-one-and-only/",
                 "be-written/": "../../node_modules/be-written/",
                 "stream-orator/": "../../node_modules/stream-orator/",
-                "trans-render/": "../../trans-render/",
+                "trans-render/": "../../node_modules/trans-render/",
                 "xtal-element/": "../../node_modules/xtal-element/",
                 "co-depends/": "../../"
             }
